--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "edwh-demo-tasks-plugin"
+name = "edwh-b2-plugin"
 dynamic = ["version"]
-description = 'Demo project with a plugin to be discovered from the edwh package'
+description = 'Plugin for `edwh` with b2 functionality'
 readme = "README.md"
 requires-python = ">=3.10"
 license = "MIT"
@@ -33,20 +33,20 @@ dev = [
 ]
 
 [project.urls]
-Documentation = "https://github.com/remcoboerma/edwh-demo-tasks-plugin#readme"
-Issues = "https://github.com/remcoboerma/edwh-demo-tasks-plugin/issues"
-Source = "https://github.com/remcoboerma/edwh-demo-tasks-plugin"
+Documentation = "https://github.com/remcoboerma/edwh-b2-plugin#readme"
+Issues = "https://github.com/remcoboerma/edwh-b2-plugin/issues"
+Source = "https://github.com/remcoboerma/edwh-b2-plugin"
 
 # https://packaging.python.org/en/latest/guides/creating-and-discovering-plugins/#using-package-metadata
 [project.entry-points."edwh.tasks"]
-demo = "edwh_demo_plugin.demo_plugin"
+b2 = "edwh_b2_plugin.b2_plugin"
 
 [tool.hatch.version]
-path = "src/edwh_demo_plugin/__about__.py"
+path = "src/edwh_b2_plugin/__about__.py"
 
 [tool.semantic_release]
 branch = "master"
-version_variable = "src/edwh_demo_plugin/__about__.py:__version__"
+version_variable = "src/edwh_b2_plugin/__about__.py:__version__"
 change_log = "CHANGELOG.md"
 upload_to_repository = false
 upload_to_release = false
@@ -84,7 +84,7 @@ dependencies = [
   "ruff>=0.0.243",
 ]
 [tool.hatch.envs.lint.scripts]
-typing = "mypy --install-types --non-interactive {args:src/edwh_demo_plugin tests}"
+typing = "mypy --install-types --non-interactive {args:src/edwh_b2_plugin tests}"
 style = [
   "ruff {args:.}",
   "black --check --diff {args:.}",
@@ -150,7 +150,7 @@ unfixable = [
 ]
 
 [tool.ruff.isort]
-known-first-party = ["edwh_demo_plugin"]
+known-first-party = ["edwh_b2_plugin"]
 
 [tool.ruff.flake8-tidy-imports]
 ban-relative-imports = "all"
@@ -160,16 +160,16 @@ ban-relative-imports = "all"
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 
 [tool.coverage.run]
-source_pkgs = ["edwh_demo_plugin", "tests"]
+source_pkgs = ["edwh_b2_plugin", "tests"]
 branch = true
 parallel = true
 omit = [
-  "src/edwh_demo_plugin/__about__.py",
+  "src/edwh_b2_plugin/__about__.py",
 ]
 
 [tool.coverage.paths]
-edwh_demo_plugin = ["src/edwh_demo_plugin", "*/edwh-demo-plugin/src/edwh_demo_plugin"]
-tests = ["tests", "*/edwh-demo-plugin/tests"]
+edwh_b2_plugin = ["src/edwh_b2_plugin", "*/edwh-b2-plugin/src/edwh_b2_plugin"]
+tests = ["tests", "*/edwh-b2-plugin/tests"]
 
 [tool.coverage.report]
 exclude_lines = [
